--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
 
 
         <!-- BOX -->
-        <div>
+        <!-- <div>
             <textarea cols="15" rows="4" class="cuadroBox" style="left: 227px; top:146px;"></textarea>
             <textarea cols="15" rows="4" class="cuadroBox" style="left: 500px; top:82px;"></textarea>
             <textarea cols="15" rows="4" class="cuadroBox" style="left: 500px; top:212px;"></textarea>
-        </div>
+        </div> -->
 
 
         <!-- BOX 2 -->
@@ -239,22 +239,22 @@
             <textarea cols="15" rows="4" class="cuadroBox" style="left: 414px; top:432px;"></textarea>
             <textarea cols="15" rows="4" class="cuadroBox" style="left: 621px; top:432px;"></textarea>
             <div style="width: 80px;"></div>
-        </div> --> 
+        </div> -->
 
-        <table class="tableStyle" style="position: absolute; left: 50%; top: 100px; border-spacing: 80px 10px;">
-            <tr style="transform: translateX(-50%);">
+        <table class="tableStyle" style="position: absolute; left: 50%; top: 70px;">
+            <tr style="transform: translateX(-75%);">
                 <td><textarea class="cuadroTabla" cols="15" rows="4"></textarea></td>
             </tr>
-            <tr style="transform: translateX(-50%);">
+            <tr style="transform: translateX(-290%);">
                 <td><textarea class="cuadroTabla" cols="15" rows="4"></textarea></td>
             </tr>
-            <tr style="transform: translateX(-50%);">
+            <tr style="transform: translateX(-75%);">
                 <td><textarea class="cuadroTabla" cols="15" rows="4"></textarea></td>
             </tr>
         </table>
 
 
-        <table class="tableStyle" style="position: absolute; left: 50%; top: 355px; border-spacing: 80px;">
+        <table class="tableStyle" style="position: absolute; left: 50%; top: 350px; border-spacing: 80px;">
             <tr style="transform: translateX(-50%);">
                 <td><textarea class="cuadroTabla" cols="15" rows="4"></textarea></td>
                 <td><textarea class="cuadroTabla" cols="15" rows="4"></textarea></td>
@@ -338,53 +338,85 @@
                 <td style="border: 1px solid white; padding: 1.5rem;" class="presentacion">
                     <h3 style="text-align: center;">La caza de ballenas en el tiempo</h3>
                     <p style="text-indent: 4rem;">
-                        El mayor depredador de las ballenas es, sin duda, el hombre. Como con otras tantas especies, no hemos sabido parar a tiempo y hemos llegado a extinguirlas casi por completo.
+                        El mayor depredador de las ballenas es, sin duda, el hombre. Como con otras tantas especies, no
+                        hemos sabido parar a tiempo y hemos llegado a extinguirlas casi por completo.
                     </p>
                     <p style="text-indent: 4rem;">
-                        Gracias a muchos científicos y a otras asociaciones desinteresadas, las medidas de protección adoptadas por la Comisión Ballenera Internacional (de la que forman parte más de 50 países balleneros) permiten el mantenimiento e incluso el desarrollo de ciertas poblaciones de rorcuales.
+                        Gracias a muchos científicos y a otras asociaciones desinteresadas, las medidas de protección
+                        adoptadas por la Comisión Ballenera Internacional (de la que forman parte más de 50 países
+                        balleneros) permiten el mantenimiento e incluso el desarrollo de ciertas poblaciones de
+                        rorcuales.
                     </p>
                     <p style="text-indent: 4rem;">
-                        Su propósito no es tanto el proteger a las ballenas, sino asegurar el futuro negocio a largo plazo, pero este es un primer paso en la conservación del animal.
+                        Su propósito no es tanto el proteger a las ballenas, sino asegurar el futuro negocio a largo
+                        plazo, pero este es un primer paso en la conservación del animal.
                     </p>
                     <p style="text-indent: 4rem;">
-                        A partir de un acuerdo hecho <b>hace ya años,</b> las capturas fueron disminuyendo, más que por las leyes, por la desaparición de estos animales. Solo en <b>1960</b> se mataron más de 60.000 ejemplares.
+                        A partir de un acuerdo hecho <b>hace ya años,</b> las capturas fueron disminuyendo, más que por
+                        las leyes, por la desaparición de estos animales. Solo en <b>1960</b> se mataron más de 60.000
+                        ejemplares.
                     </p>
                     <p style="text-indent: 4rem;">
-                        Quizás la suerte de las ballenas esté en la industria química, que va sintetizando los productos que, hasta ahora, se elaboraban a partir de las ballenas.
+                        Quizás la suerte de las ballenas esté en la industria química, que va sintetizando los productos
+                        que, hasta ahora, se elaboraban a partir de las ballenas.
                     </p>
                     <p style="text-indent: 4rem;">
-                        Otro de los factores que colaboraron en esta conservación fue que en <b>1975</b>, la propia C.B.I., presionada por las cada vez más numerosas asociaciones mundiales de carácter ecológico, dejó de ser un club de balleneros para pasar a ser una genuina asociación ecologista.
+                        Otro de los factores que colaboraron en esta conservación fue que en <b>1975</b>, la propia
+                        C.B.I., presionada por las cada vez más numerosas asociaciones mundiales de carácter ecológico,
+                        dejó de ser un club de balleneros para pasar a ser una genuina asociación ecologista.
                     </p>
                     <p style="text-indent: 4rem;">
-                        No fue hasta <b>1986</b> en que la propia C.B.I. aprobó la prohibición internacional de comercializar los productos derivados de estos animales. Por desgracia, no todos los países aceptaron esta decisión, Noruega, Islandia, Corea y Japón han ido poniendo excusas con el fin de seguir matando ballenas. Noruega y Japón matan de 600 a 650 ballenas cada año “con fines científicos”.
+                        No fue hasta <b>1986</b> en que la propia C.B.I. aprobó la prohibición internacional de
+                        comercializar los productos derivados de estos animales. Por desgracia, no todos los países
+                        aceptaron esta decisión, Noruega, Islandia, Corea y Japón han ido poniendo excusas con el fin de
+                        seguir matando ballenas. Noruega y Japón matan de 600 a 650 ballenas cada año “con fines
+                        científicos”.
                     </p>
                     <p style="text-align: end; font-size: 1rem;">[www.puertopiramides.gov.ar]</p>
                 </td>
             </tr>
-
             <!-- iguales pero diferentes -->
             <tr>
                 <td style="border: 1px solid white; padding: 1.5rem;" class="presentacion">
                     <h3 style="text-align: center;">Iguales pero diferentes</h3>
                     <p style="text-indent: 4rem;">
-                        Como te podés imaginar, dada la enorme cantidad de seres vivos que existen, el modo en que cada uno lleva a cabo sus “actividades” es muy diverso.
+                        Como te podés imaginar, dada la enorme cantidad de seres vivos que existen, el modo en que cada
+                        uno lleva a cabo sus “actividades” es muy diverso.
                     </p>
                     <p style="text-indent: 4rem;">
-                        Si comparás todos los seres vivos que conocés, descubrirás muchas diferencias entre ellos. Por ejemplo, podemos comparar las plantas y los hongos. Es sabido que las plantas son <b>autótrofas</b> porque elaboran sus propios nutrientes en el proceso de fotosíntesis. En cambio, los hongos son <b>heterótrofos</b>, pues incorporan sustancias provenientes del alimento ya elaborado por otros organismos. ¿Qué otra diferencia? La forma de reproducción. La mayoría de los seres vivos producen descendencia, a partir de la <b>reproducción sexual</b>, como es el caso de las plantas con flores. En ellas intervienen dos <b>gametas</b> (células sexuales) que se fusionan durante la <b>fecundación</b>. Pero también hay otros seres vivos, como las amebas, cuya reproducción es <b>asexual</b>, o sea que el nuevo individuo se desarrolla a partir de un único progenitor.
+                        Si comparás todos los seres vivos que conocés, descubrirás muchas diferencias entre ellos. Por
+                        ejemplo, podemos comparar las plantas y los hongos. Es sabido que las plantas son
+                        <b>autótrofas</b> porque elaboran sus propios nutrientes en el proceso de fotosíntesis. En
+                        cambio, los hongos son <b>heterótrofos</b>, pues incorporan sustancias provenientes del alimento
+                        ya elaborado por otros organismos. ¿Qué otra diferencia? La forma de reproducción. La mayoría de
+                        los seres vivos producen descendencia, a partir de la <b>reproducción sexual</b>, como es el
+                        caso de las plantas con flores. En ellas intervienen dos <b>gametas</b> (células sexuales) que
+                        se fusionan durante la <b>fecundación</b>. Pero también hay otros seres vivos, como las amebas,
+                        cuya reproducción es <b>asexual</b>, o sea que el nuevo individuo se desarrolla a partir de un
+                        único progenitor.
                     </p>
                     <p style="text-indent: 4rem;">
-                        Sin embargo, sea como fuere y sin excepción, todos los seres vivos cumplen con determinadas <b>funciones vitales</b> relacionadas entre sí:
+                        Sin embargo, sea como fuere y sin excepción, todos los seres vivos cumplen con determinadas
+                        <b>funciones vitales</b> relacionadas entre sí:
                     </p>
                     <p style="text-indent: 4rem;">
-                        · <b>Nutrición:</b> permite obtener la materia y la energía necesarias para vivir. Esto incluye: la alimentación (en el caso de los organismos autótrofos, la fotosíntesis), la respiración, la circulación y la excreción.
+                        · <b>Nutrición:</b> permite obtener la materia y la energía necesarias para vivir. Esto incluye:
+                        la alimentación (en el caso de los organismos autótrofos, la fotosíntesis), la respiración, la
+                        circulación y la excreción.
                     </p>
                     <p style="text-indent: 4rem;">
-                        · <b>Relación:</b> esta función incluye todos los mecanismos por medio de los cuales los seres vivos establecen vínculos, tanto con los elementos físicos del ambiente donde habitan como con los otros seres vivos que comparten ese lugar. ¿Y cómo se establecen esos vínculos? A través de la percepción de estímulos provenientes del medio externo (luz, temperatura, sonidos, etc.) y de las respuestas a esos estímulos, por ejemplo, moviéndose.
+                        · <b>Relación:</b> esta función incluye todos los mecanismos por medio de los cuales los seres
+                        vivos establecen vínculos, tanto con los elementos físicos del ambiente donde habitan como con
+                        los otros seres vivos que comparten ese lugar. ¿Y cómo se establecen esos vínculos? A través de
+                        la percepción de estímulos provenientes del medio externo (luz, temperatura, sonidos, etc.) y de
+                        las respuestas a esos estímulos, por ejemplo, moviéndose.
                     </p>
                     <p style="text-indent: 4rem;">
-                        · <b>Reproducción:</b> gracias a esta función, los organismos generan descendientes semejantes a ellos mismos y así perpetúan la especie.
+                        · <b>Reproducción:</b> gracias a esta función, los organismos generan descendientes semejantes a
+                        ellos mismos y así perpetúan la especie.
                     </p>
-                    <p style="text-align: end; font-size: 1rem;">[E. Cynowiec et alt. (2006) Ciencias Naturales 7,</br>Buenos Aires: Santillana, p.143]</p>
+                    <p style="text-align: end; font-size: 1rem;">[E. Cynowiec et alt. (2006) Ciencias Naturales
+                        7,</br>Buenos Aires: Santillana, p.143]</p>
                 </td>
             </tr>
         </table>
@@ -397,13 +429,17 @@
         <h1 class="subTit">ESTRATEGIAS DEL TEXTO EXPOSITIVO</h1>
 
         <p class="presentacion" style="margin-top: 3rem; text-indent: 4rem;">
-            Estrategias discursivas: uso de formas de impersonalidad, tiempos verbales del indicativo, progresión temática. Estrategias explicativas: definición, ejemplificación, comparación, reformulación. Paratexto: elemento que acompaña al texto y contribuye a la comprensión lectora (imágenes, títulos,subtítulos, glosarios etc. )
+            Estrategias discursivas: uso de formas de impersonalidad, tiempos verbales del indicativo, progresión
+            temática. Estrategias explicativas: definición, ejemplificación, comparación, reformulación. Paratexto:
+            elemento que acompaña al texto y contribuye a la comprensión lectora (imágenes, títulos,subtítulos,
+            glosarios etc. )
         </p>
 
         <p class="subHeader" style="margin-top: 3rem; ">Actividades</p>
 
         <p class="presentacion" style="text-indent: 4rem;">
-            Presentación de un juego que consiste en el armado de un rompecabezas virtual e interactivo. Se solicita a los alumnos seguir las siguientes instrucciones:
+            Presentación de un juego que consiste en el armado de un rompecabezas virtual e interactivo. Se solicita a
+            los alumnos seguir las siguientes instrucciones:
         </p>
 
         <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline; margin-top: 2rem">Primer
@@ -417,7 +453,8 @@
         <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline; margin-top: 2rem">Segundo
             momento:</p>
         <ol start="4" class="presentacion" type="a" style="margin-top: 1rem;">
-            <li>¿Qué pistas o indicios ayudaron al armado? Marcar los elementos que relacionan los párrafos y hacen avanzar la información.</li>
+            <li>¿Qué pistas o indicios ayudaron al armado? Marcar los elementos que relacionan los párrafos y hacen
+                avanzar la información.</li>
             <li>Selecciona en el texto: ejemplos, definiciones, comparaciones, reformulaciones que encuentres.</li>
         </ol>
 
