--- a/index.html
+++ b/index.html
@@ -254,8 +254,17 @@
         </table>
 
 
-        <table class="tableStyle" style="position: absolute; left: 50%; top: 350px; border-spacing: 80px;">
+        <!-- <table class="tableStyle" style="position: absolute; left: 50%; top: 350px; border-spacing: 80px;">
             <tr style="transform: translateX(-50%);">
+                <td><textarea class="cuadroTabla" cols="15" rows="4"></textarea></td>
+                <td><textarea class="cuadroTabla" cols="15" rows="4"></textarea></td>
+                <td><textarea class="cuadroTabla" cols="15" rows="4"></textarea></td>
+                <td><textarea class="cuadroTabla" cols="15" rows="4"></textarea></td>
+            </tr>
+        </table> -->
+
+        <table class="tableStyle" style="margin: auto; transform: translateY(-765px); border-spacing: 70px;">
+            <tr >
                 <td><textarea class="cuadroTabla" cols="15" rows="4"></textarea></td>
                 <td><textarea class="cuadroTabla" cols="15" rows="4"></textarea></td>
                 <td><textarea class="cuadroTabla" cols="15" rows="4"></textarea></td>
