--- a/index.html
+++ b/index.html
@@ -9,30 +9,33 @@
     <link rel="stylesheet" href="css/ruleta.css">
     <link rel="stylesheet" href="css/cuadros.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <script src="TweenMax.min.js"></script>
     <script src="Winwheel.min.js"></script>
     <script src="DragDropTouch.js"></script>
 </head>
 
 <body>
-
+    <!-- background-color: rgb(98, 93, 112); -->
 
     <!-- TITULO -->
     <div style="position: relative;">
         <img src="img/unsa.jpg" alt=""
-            style="position: absolute; left: 0px; top:-23px; transform: scale(0.8); display: block;">
-        <img src="img/didactica.png" alt=""
-            style="position: absolute; right: 20px; top: 20%; transform: scale(1); display: block;">
+            style="position: absolute; left: -10px; top:-23px; transform: scale(0.78); display: block;">
+        <img src="img/didacticaw.jpg" alt=""
+            style="position: absolute; right: -20px; top: -23px; transform: scale(0.78); display: block;">
         <h1 style="
             margin: 0;
-            background-color: rgb(98, 93, 112);
-            color: thistle;
+            background-image: url('img/banner.jpg');
+            text-shadow: 1px 1px 10px black;
+            color: #ffb8b8;
             text-align: center;
             vertical-align: center;
+            font-family: 'Roboto Slab', serif;
+            font-weight: 900;
             font-size: 100px;
             ">
-            Texto</br>expositivo
+            TEXTO</br>EXPOSITIVO
         </h1>
     </div>
     <!--  -->
@@ -191,7 +194,7 @@
     <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline; margin-top: 2rem;">Segundo
         momento:</p>
     <p class="presentacion" style="text-indent: 4rem;">Responden las siguientes preguntas</p>
-    <ol class="presentacion" type="a" style="margin-top: 1rem;">
+    <ol class="presentacion" type="a" style="margin-top: 1rem; margin-bottom: 3rem;">
         <li>¿Cuál es la temática que abordan los textos?</li>
         <li>¿Cómo presenta y desarrolla el autor cada tema?</li>
         <li>¿Observando las plantillas (interactivas) propuestas ¿a cuál correspondería cada texto leído?
@@ -307,7 +310,7 @@
         <!-- <line class="cool" x1="10" y1="150" x2="130" y2="150"></line> -->
 
 
-        <table style="width: 80%; margin: auto;">
+        <table style="width: 80%; margin: auto; transform: translateY(-120px);">
             <!-- las ballenas -->
             <tr>
                 <td style="border: 1px solid white; padding: 1.5rem;" class="presentacion">
