--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 <body>
     <!-- background-color: rgb(98, 93, 112); -->
 
+
+
+
     <!-- TITULO -->
     <div style="position: relative;">
         <img src="img/unsa.jpg" alt=""
@@ -27,7 +30,7 @@
         <h1 style="
             margin: 0;
             background-image: url('img/banner.jpg');
-            text-shadow: 1px 1px 10px black;
+            text-shadow: 3px 3px 5px #666666;
             color: #ffb8b8;
             text-align: center;
             vertical-align: center;
@@ -39,6 +42,10 @@
         </h1>
     </div>
     <!--  -->
+
+
+
+
 
 
 
@@ -63,6 +70,11 @@
 
         <div style="height: 20px;"></div>
     </div>
+
+
+
+
+
 
 
 
@@ -144,7 +156,7 @@
     </div>
 
 
-    <div style="background-color: #272727; position: relative;">
+    <div class="container" style="background-color: #272727; position: relative;">
         <h1 style="text-align: center; color: white; background-color: #d83636;">Elementos</h1>
         <img src="img/recorte05.jpg" alt="" class="draggable" draggable="true">
         <img src="img/recorte01.jpg" alt="" class="draggable" draggable="true">
