--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/ruleta.css">
     <link rel="stylesheet" href="css/cuadros.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <script src="TweenMax.min.js"></script>
     <script src="Winwheel.min.js"></script>
     <script src="DragDropTouch.js"></script>
@@ -53,7 +54,7 @@
     <div>
         <h1 class="subTit">PRESENTACIÓN</h1>
         <p class="presentacion" style="margin-top: 3rem; text-indent: 4rem;">
-            La presente página web definida como página electrónica, página digital es un documento o información
+            <!-- La presente página web definida como página electrónica, página digital es un documento o información
             electrónica capaz de contener textos, sonidos, videos, programas, enlaces, imágenes, y que puede ser
             accedida mediante un navegador web. Una página web está compuesta principalmente por información de un tema
             factible, además puede contener datos sobre cómo debe visualizarse y también aplicaciones para así permitir
@@ -62,7 +63,21 @@
             herramienta tecnológica se intentará vincular desde la virtualidad el trabajo del docente y del alumno
             atendiendo al contexto de no presencialidad. De este modo, el contenido abordado será El texto expositivo.
             Comprensión lectora con el objetivo de ayudar a mejorar su comprensión. Se proponen actividades diversas y
-            lúdicas con la finalidad de poner en práctica las estrategias de comprensión de este tipo de texto.
+            lúdicas con la finalidad de poner en práctica las estrategias de comprensión de este tipo de texto. -->
+
+            La presente página web definida como página electrónica, página digital es un documento o
+            información electrónica capaz de contener textos, sonidos, videos, programas, enlaces,
+            imágenes, y que puede ser accedida mediante computadora o celular.
+            Esta página web está compuesta principalmente por información sobre un tema: El texto
+            expositivo. Comprensión lectora, cuyo objetivo será ayudar a mejorar su comprensión. Es
+            factible, además de permitir la interacción con ustedes jóvenes a través de lecturas
+            interesantes y juegos.
+            Por medio de esta herramienta tecnológica se intentará vincular desde la virtualidad el
+            trabajo del docente y del alumno atendiendo al contexto de no presencialidad.
+            Se proponen actividades diversas, lúdicas e interactivas con la finalidad de poner en práctica
+            las estrategias de comprensión de este tipo de texto.
+
+
         </p>
         <div style="height: 20px;"></div>
 
@@ -96,27 +111,38 @@
     <!-- -------------------------------------------------------------------------------------------- -->
     <!-- PARATEXTO -->
     <h1 class="subTit">PARATEXTO</h1>
-    <p class="presentacion" style="margin-top: 3rem; text-indent: 4rem;">El paratexto es un elemento que acompaña al
+    <p class="presentacion" style="margin-top: 3rem; text-indent: 4rem;">
+        <!-- El paratexto es un elemento que acompaña al
         texto y contribuye a la comprensión lectora.
         Estos pueden ser: imágenes, títulos, subtítulos, glosarios etc. Permiten anticipar el tema del texto a través de
-        inferencias.
+        inferencias. -->
+        El paratexto es un elemento que acompaña al texto y contribuye a la comprensión lectora.
+        Estos pueden ser: imágenes, títulos, subtítulos, glosarios etc. Permiten anticipar el tema del
+        texto a través de inferencias.
     </p>
 
     <p class="subHeader" style="margin-top: 3rem; ">Actividades</p>
     <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline;">Primer momento:</p>
-    <p class="presentacion" style="text-indent: 4rem;">
+    <!-- <p class="presentacion" style="text-indent: 4rem;">
         Se propone la lectura de tres textos expositivos breves que no poseen elementos paratextuales.
         Los alumnos realizan la lectura de los 3 textos.</br>
         Texto A: A la carta (título e imagen separados del cuerpo del texto)</br>
         Texto B: Cielos despejados (título, imagen y definición separados del texto)</br>
         Texto C: Al límite (título, imagen separados del texto)
-    </p>
+    </p> -->
     <ol class="presentacion" type="a" style="margin-top: 1rem;">
-        <li>Lee con atención los textos.</li>
-        <li>Observa los elementos que están sueltos y que pertenecen a los textos leídos. Coloca cada elemento con el
+        <li style="margin-bottom: 1rem;">
+            Lee con atención los textos.<br>Texto A: A la carta.<br>Texto B: Cielos despejados.<br>Texto C: Al límite.
+        </li>
+        <li>
+            <!-- Observa los elementos que están sueltos y que pertenecen a los textos leídos. Coloca cada elemento con el
             texto correspondiente.
             (Lo podrán hacer deslizando el dedo por la pantalla para ubicar los elementos o con el mouse de la
-            computadora)</li>
+            computadora) -->
+            Observa abajo los elementos que están sueltos y que pertenecen a los textos leídos.
+            Coloca cada elemento con el texto correspondiente. (Lo podrás hacer deslizando el
+            dedo por la pantalla para ubicar los elementos o con el mouse de la computadora)
+        </li>
     </ol>
 
 
@@ -124,11 +150,14 @@
 
 
     <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline;">Segundo momento:</p>
-    <p class="presentacion" style="text-indent: 4rem;">Los alumnos responden a la siguiente pregunta y registran sus
-        respuestas:</p>
-    <ol class="presentacion" type="a" style="margin-top: 1rem;">
-        <li>¿Qué función cumplen los títulos, subtítulos, imágenes, palabras destacadas, glosario en el texto
-            expositivo?</li>
+    <!-- <p class="presentacion" style="text-indent: 4rem;">Los alumnos responden a la siguiente pregunta y registran sus respuestas:</p> -->
+    <ol class="presentacion" type="a" start="3" style="margin-top: 1rem;">
+        <li>
+            <!-- ¿Qué función cumplen los títulos, subtítulos, imágenes, palabras destacadas, glosario en el texto
+            expositivo? -->
+            Al finalizar la actividad anterior piensa: ¿Qué función cumplen los títulos, subtítulos,
+            imágenes, palabras destacadas, glosario en el texto expositivo?
+        </li>
     </ol>
 
 
@@ -155,7 +184,6 @@
 
     </div>
 
-
     <div class="container" style="background-color: #272727; position: relative;">
         <h1 style="text-align: center; color: white; background-color: #d83636;">Elementos</h1>
         <img src="img/recorte05.jpg" alt="" class="draggable" draggable="true">
@@ -171,41 +199,51 @@
     <!--  -->
 
 
+
+
+
+
+
+
     <!-- --------------------------------------------------------------------------------------------------- -->
     <h1 class="subTit">ORGANIZACIÓN DE LOS TEXTOS EXPOSITIVOS</h1>
 
     <p class="presentacion" style="text-indent: 4rem;">
-        El texto expositivo se estructura de acuerdo a diferentes modos de organización. Ellos son:
+        El texto expositivo se estructura de acuerdo a diferentes modos de organización.<br>Ellos son:
     </p>
 
     <ul class="presentacion" style="margin-top: 2rem;">
-        <li>Descriptiva: Los elementos son agrupados en torno a una determinada entidad, en tanto rasgos, atributos o
+        <li><b>Descriptiva:</b> Los elementos son agrupados en torno a una determinada entidad, en tanto rasgos,
+            atributos o
             características de ella.
         </li>
-        <li>Seriación: los datos pueden ser agrupados en una secuencia temporal.</li>
-        <li>Causal: incluye vínculos causales entre elementos antecedente- consecuente.</li>
-        <li>Problema- solución: está relacionado con la estructura causal pero más organizada, relación temporal y un
+        <li><b>Seriación:</b> Los datos pueden ser agrupados en una secuencia temporal.</li>
+        <li><b>Causal:</b> Incluye vínculos causales entre elementos antecedente-consecuente.</li>
+        <li><b>Problema-solución:</b> Está relacionado con la estructura causal pero más organizada, relación temporal y
+            un
             vínculo causal entre problema y solución.</li>
-        <li>Comparación: el texto se organiza en torno a la confrontación de dos entidades o fenómenos para establecer
+        <li><b>Comparación:</b> El texto se organiza en torno a la confrontación de dos entidades o fenómenos para
+            establecer
             semejanzas y diferencias.</li>
     </ul>
 
     <p class="subHeader" style="margin-top: 3rem; ">Actividades</p>
     <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline; margin-top: 2rem;">Primer
         momento:</p>
-    <p class="presentacion" style="text-indent: 4rem;">
+    <!-- <p class="presentacion" style="text-indent: 4rem;">
         Los estudiantes realizan la lectura de los siguientes textos</br>
         Texto A: La ballena.</br>
         Texto B: La caza de ballenas en el tiempo.</br>
         Texto C: Iguales pero diferentes.
-    </p>
+    </p> -->
     <ol class="presentacion" type="a" style="margin-top: 1rem;">
-        <li>Lee con atención los textos propuestos.</li>
+        <li>Lee con atención los textos propuestos.<br>Texto A: La ballena.<br>Texto B: La caza de ballenas en el
+            tiempo.<br>Texto C: Iguales pero diferentes.</li>
     </ol>
 
     <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline; margin-top: 2rem;">Segundo
         momento:</p>
-    <p class="presentacion" style="text-indent: 4rem;">Responden las siguientes preguntas</p>
+    <p class="presentacion" style="text-indent: 4rem;">Responden las siguientes preguntas.</p>
     <ol class="presentacion" type="a" style="margin-top: 1rem; margin-bottom: 3rem;">
         <li>¿Cuál es la temática que abordan los textos?</li>
         <li>¿Cómo presenta y desarrolla el autor cada tema?</li>
@@ -279,7 +317,7 @@
         </table> -->
 
         <table class="tableStyle" style="margin: auto; transform: translateY(-765px); border-spacing: 70px;">
-            <tr >
+            <tr>
                 <td><textarea class="cuadroTabla" cols="15" rows="4"></textarea></td>
                 <td><textarea class="cuadroTabla" cols="15" rows="4"></textarea></td>
                 <td><textarea class="cuadroTabla" cols="15" rows="4"></textarea></td>
@@ -448,23 +486,43 @@
     </div>
 
 
+
+
+
+
+
+
+
+
+
+
     <!-- ROMPECABEZAS -->
     <div class="r1">
         <h1 class="subTit">ESTRATEGIAS DEL TEXTO EXPOSITIVO</h1>
 
         <p class="presentacion" style="margin-top: 3rem; text-indent: 4rem;">
-            Estrategias discursivas: uso de formas de impersonalidad, tiempos verbales del indicativo, progresión
+            <!-- Estrategias discursivas: uso de formas de impersonalidad, tiempos verbales del indicativo, progresión
             temática. Estrategias explicativas: definición, ejemplificación, comparación, reformulación. Paratexto:
             elemento que acompaña al texto y contribuye a la comprensión lectora (imágenes, títulos,subtítulos,
-            glosarios etc. )
+            glosarios etc. ) -->
+            Estrategias discursivas: uso de formas de impersonalidad, tiempos verbales del indicativo, progresión
+            temática.
         </p>
+        <p class="presentacion" style="margin-top: 1rem; text-indent: 4rem;">
+            Estrategias explicativas: definición, ejemplificación, comparación, reformulación.
+        </p>
+        <p class="presentacion" style="margin-top: 1rem; text-indent: 4rem;">
+            Paratexto: elemento que acompaña al texto y contribuye a la comprensión lectora (imágenes,
+            títulos, subtítulos, glosarios etc.)
+        </p>
+
 
         <p class="subHeader" style="margin-top: 3rem; ">Actividades</p>
 
-        <p class="presentacion" style="text-indent: 4rem;">
+        <!-- <p class="presentacion" style="text-indent: 4rem;">
             Presentación de un juego que consiste en el armado de un rompecabezas virtual e interactivo. Se solicita a
             los alumnos seguir las siguientes instrucciones:
-        </p>
+        </p> -->
 
         <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline; margin-top: 2rem">Primer
             momento:</p>
@@ -510,12 +568,9 @@
     <div class="r2">
         <p class="subHeader" style="margin-top: 3rem; ">Rompecabezas 2/2</p>
 
-
-
         <iframe src="https://www.jigsawplanet.com/?rc=play&amp;pid=31fec8d01cfb&amp;view=iframe"
             style="width: 90%; height: 1500px; border-style: solid; border-width: 2px; border-color: #888"
             allowfullscreen></iframe>
-
 
         <!-- <iframe style="width: 90%; height: 1500px; border-style: solid; border-width: 2px; border-color: #888"
             allowFullScreen="true"
@@ -531,15 +586,28 @@
     <h1 class="subTit">AUTOEVALUACIÓN</h1>
     <div>
         <p class="subHeader">Actividades</p>
-        <ul style="margin-top: 1rem" class="presentacion">
-            <li>Los alumnos harán girar una ruleta virtual y responderán las preguntas elegidas al azar.</li>
+        <ul style="margin-top: 1rem; margin-bottom: 3rem" class="presentacion">
+            <!-- <li>Los alumnos harán girar una ruleta virtual y responderán las preguntas elegidas al azar.</li>
             <li>Participarán con 5 tiros cada uno.</li>
             <li>Las preguntas serán de comprensión de los textos expositivos leídos.</li>
-            <li>Las preguntas, con opciones, tendrán un valor de 20 puntos cada una.</li>
-        </ul>
+            <li>Las preguntas, con opciones, tendrán un valor de 20 puntos cada una.</li> -->
 
-        <p style="margin-top: 2rem" class="presentacion">Al finalizar el juego podrá el estudiante consultar el puntaje
-            obtenido.</p>
+            <li style="margin-bottom: 1rem;">Podrás hacer girar una ruleta virtual y responder las preguntas elegidas al azar. Participarás
+                con 5 tiros solamente.</li>
+            <li style="margin-bottom: 1rem;">Las preguntas serán de comprensión de los textos expositivos leídos.</li>
+            <li style="margin-bottom: 1rem;">Estas, con opciones, tendrán un valor de 20 puntos cada una. Al finalizar el juego podrás
+                consultar el puntaje obtenido. ¡A jugar!</li>
+
+        </ul>
+        <p class="presentacion" style="text-indent: 3rem; margin-bottom: 1rem;">Podrás hacer girar una ruleta virtual y responder las preguntas elegidas al azar. Participarás
+            con 5 tiros solamente.</p>
+        <p class="presentacion" style="text-indent: 3rem; margin-bottom: 1rem;">Las preguntas serán de comprensión de los textos expositivos leídos.</p>
+        <p class="presentacion"style="text-indent: 3rem; margin-bottom: 1rem;">Estas, con opciones, tendrán un valor de 20 puntos cada una. Al finalizar el juego podrás
+            consultar el puntaje obtenido. ¡A jugar!</p>
+
+
+        <!-- <p style="margin-top: 2rem" class="presentacion">Al finalizar el juego podrá el estudiante consultar el puntaje
+            obtenido.</p> -->
         <div style="height: 60px;"></div>
     </div>
 
