--- a/index.html
+++ b/index.html
@@ -597,13 +597,13 @@
             <li style="margin-bottom: 1rem;">Las preguntas serán de comprensión de los textos expositivos leídos.</li>
             <li style="margin-bottom: 1rem;">Estas, con opciones, tendrán un valor de 20 puntos cada una. Al finalizar el juego podrás
                 consultar el puntaje obtenido. ¡A jugar!</li>
-
         </ul>
-        <p class="presentacion" style="text-indent: 3rem; margin-bottom: 1rem;">Podrás hacer girar una ruleta virtual y responder las preguntas elegidas al azar. Participarás
+
+        <!-- <p class="presentacion" style="text-indent: 3rem; margin-bottom: 1rem;">Podrás hacer girar una ruleta virtual y responder las preguntas elegidas al azar. Participarás
             con 5 tiros solamente.</p>
         <p class="presentacion" style="text-indent: 3rem; margin-bottom: 1rem;">Las preguntas serán de comprensión de los textos expositivos leídos.</p>
         <p class="presentacion"style="text-indent: 3rem; margin-bottom: 1rem;">Estas, con opciones, tendrán un valor de 20 puntos cada una. Al finalizar el juego podrás
-            consultar el puntaje obtenido. ¡A jugar!</p>
+            consultar el puntaje obtenido. ¡A jugar!</p> -->
 
 
         <!-- <p style="margin-top: 2rem" class="presentacion">Al finalizar el juego podrá el estudiante consultar el puntaje
