--- a/index.html
+++ b/index.html
@@ -96,10 +96,16 @@
     <!-- TUTORIAL -->
     <div class="pre">
         <h1 class="subTit">TUTORIAL</h1>
-        <iframe
+        <!-- <iframe
             src="https://docs.google.com/presentation/d/e/2PACX-1vTFqfTYM8UzS0zUlX_xXNKylhLOiy0mtTZ9ZpX3smIpSrARKgiQrHmm1kyzbJRwCA/embed?start=false&loop=false&delayms=1000"
             frameborder="0" width="800" height="480" allowfullscreen="true">
+        </iframe> -->
+
+        <iframe width="800" height="480" src="https://www.youtube.com/embed/8RloV4t8WTE" frameborder="0"
+            allowfullscreen="true">
         </iframe>
+
+
     </div>
     <!--  -->
 
@@ -592,10 +598,12 @@
             <li>Las preguntas serán de comprensión de los textos expositivos leídos.</li>
             <li>Las preguntas, con opciones, tendrán un valor de 20 puntos cada una.</li> -->
 
-            <li style="margin-bottom: 1rem;">Podrás hacer girar una ruleta virtual y responder las preguntas elegidas al azar. Participarás
+            <li style="margin-bottom: 1rem;">Podrás hacer girar una ruleta virtual y responder las preguntas elegidas al
+                azar. Participarás
                 con 5 tiros solamente.</li>
             <li style="margin-bottom: 1rem;">Las preguntas serán de comprensión de los textos expositivos leídos.</li>
-            <li style="margin-bottom: 1rem;">Estas, con opciones, tendrán un valor de 20 puntos cada una. Al finalizar el juego podrás
+            <li style="margin-bottom: 1rem;">Estas, con opciones, tendrán un valor de 20 puntos cada una. Al finalizar
+                el juego podrás
                 consultar el puntaje obtenido. ¡A jugar!</li>
         </ul>
 
