--- a/index.html
+++ b/index.html
@@ -101,8 +101,13 @@
             frameborder="0" width="800" height="480" allowfullscreen="true">
         </iframe> -->
 
-        <iframe width="800" height="480" src="https://www.youtube.com/embed/8RloV4t8WTE" frameborder="0"
+        <!-- <iframe width="800" height="480" src="https://www.youtube.com/embed/8RloV4t8WTE" frameborder="0"
             allowfullscreen="true">
+        </iframe> -->
+
+        <iframe width="800" height="480" src="https://www.youtube-nocookie.com/embed/8RloV4t8WTE" frameborder="0"
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
         </iframe>
 
 
