--- a/index.html
+++ b/index.html
@@ -24,10 +24,17 @@
 
     <!-- TITULO -->
     <div style="position: relative;">
-        <img src="img/unsa.jpg" alt=""
+
+        <!-- <img src="img/unsa.jpg" alt=""
             style="position: absolute; left: -10px; top:-23px; transform: scale(0.78); display: block;">
         <img src="img/didacticaw.jpg" alt=""
-            style="position: absolute; right: -20px; top: -23px; transform: scale(0.78); display: block;">
+            style="position: absolute; right: -20px; top: -23px; transform: scale(0.78); display: block;"> -->
+
+        <img src="img/unsa.jpg" alt=""
+            style="position: absolute; left: -10px; top: -10px; transform: scale(0.92); display: block;">
+        <img src="img/didacticaw.jpg" alt=""
+            style="position: absolute; right: -9px; top: -10px; transform: scale(0.92); display: block;">
+
         <h1 style="
             margin: 0;
             background-image: url('img/banner.jpg');
@@ -106,8 +113,7 @@
         </iframe> -->
 
         <iframe width="800" height="480" src="https://www.youtube-nocookie.com/embed/8RloV4t8WTE" frameborder="0"
-            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
 
 
@@ -371,7 +377,7 @@
         <!-- <line class="cool" x1="10" y1="150" x2="130" y2="150"></line> -->
 
 
-        <table style="width: 80%; margin: auto; transform: translateY(-120px);">
+        <table style="width: 80%; margin: auto; transform: translateY(-120px); background: #3b2b37;">
             <!-- las ballenas -->
             <tr>
                 <td style="border: 1px solid white; padding: 1.5rem;" class="presentacion">
