--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- background-color: rgb(98, 93, 112); -->
 
 
-
+    <!-- Página creada por Acosta, María Alejandra. -->
 
     <!-- TITULO -->
     <div style="position: relative;">
@@ -32,22 +32,46 @@
 
         <img src="img/unsa.jpg" alt=""
             style="position: absolute; left: -10px; top: -10px; transform: scale(0.92); display: block;">
-        <img src="img/didacticaw.jpg" alt=""
+
+        <img src="img/huma.jpg" alt="" style="position: absolute;
+        left: -20px;
+        top: 259px;
+        transform: scale(0.8);
+        display: block;
+        ">
+
+
+
+        <img src="img/didactica.jpg" alt=""
             style="position: absolute; right: -9px; top: -10px; transform: scale(0.92); display: block;">
 
-        <h1 style="
-            margin: 0;
-            background-image: url('img/banner.jpg');
-            text-shadow: 3px 3px 5px #666666;
-            color: #ffb8b8;
+
+
+        <h1 style="position: absolute;
+            right: 1px;
+            top: 255px;
             text-align: center;
-            vertical-align: center;
-            font-family: 'Roboto Slab', serif;
-            font-weight: 900;
-            font-size: 100px;
+            color: rgb(87, 86, 86);
+            background-color:white;
+            width: 212px;
+            height: 49px;
+            font-size: 1rem;
+            word-spacing: 0.2rem;
+            padding: 3px;
             ">
-            TEXTO</br>EXPOSITIVO
+            Página creada por: Acosta, María Alejandra
         </h1>
+
+        <div style="background-image: url('img/banner.jpg');">
+            <h1 class="banner" style="font-size: 100px;">
+                TEXTO</br>EXPOSITIVO
+            </h1>
+
+            <h1 class="banner" style="font-size: 40px;">
+                LEO Y COMPRENDO
+            </h1>
+        </div>
+
     </div>
     <!--  -->
 
@@ -112,9 +136,15 @@
             allowfullscreen="true">
         </iframe> -->
 
-        <iframe width="800" height="480" src="https://www.youtube-nocookie.com/embed/8RloV4t8WTE" frameborder="0"
+        <!-- <iframe width="800" height="480" src="https://www.youtube-nocookie.com/embed/8RloV4t8WTE" frameborder="0"
             allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-        </iframe>
+        </iframe> -->
+
+        <video width="800" height="480" controls style="display: flex; margin: auto;">
+            <source src="img/texto expositivo (FINAL FINAL).mp4" type="video/mp4">
+            <!-- <source src="movie.ogg" type="video/ogg"> -->
+          Your browser does not support the video tag.
+          </video>
 
 
     </div>
@@ -149,8 +179,7 @@
     </p> -->
     <ol class="presentacion" type="a" style="margin-top: 1rem;">
         <li style="margin-bottom: 1rem;">
-            Lee con atención los textos.<br>Texto A: A la carta.<br>Texto B: Cielos despejados.<br>Texto C: Al límite.
-        </li>
+            Lee co
         <li>
             <!-- Observa los elementos que están sueltos y que pertenecen a los textos leídos. Coloca cada elemento con el
             texto correspondiente.
@@ -158,7 +187,7 @@
             computadora) -->
             Observa abajo los elementos que están sueltos y que pertenecen a los textos leídos.
             Coloca cada elemento con el texto correspondiente. (Lo podrás hacer deslizando el
-            dedo por la pantalla para ubicar los elementos o con el mouse de la computadora)
+            dedo por la pantalla o con el mouse de la computadora para ubicar los elementos)
         </li>
     </ol>
 
@@ -216,6 +245,7 @@
     <!--  -->
 
 
+    <div style="height: 5rem;"></div>
 
 
 
@@ -260,7 +290,7 @@
 
     <p class="presentacion" style="font-size: 1.5rem; text-decoration-line: underline; margin-top: 2rem;">Segundo
         momento:</p>
-    <p class="presentacion" style="text-indent: 4rem;">Responden las siguientes preguntas.</p>
+    <p class="presentacion" style="text-indent: 4rem;">Responde las siguientes preguntas:</p>
     <ol class="presentacion" type="a" style="margin-top: 1rem; margin-bottom: 3rem;">
         <li>¿Cuál es la temática que abordan los textos?</li>
         <li>¿Cómo presenta y desarrolla el autor cada tema?</li>
@@ -581,7 +611,6 @@
     </div>
 
 
-
     <div class="r2">
         <p class="subHeader" style="margin-top: 3rem; ">Rompecabezas 2/2</p>
 
@@ -597,6 +626,7 @@
     </div>
     <!--  -->
 
+    <div style="height: 6rem;"></div>
 
 
     <!-- RULETA -->
@@ -614,8 +644,7 @@
                 con 5 tiros solamente.</li>
             <li style="margin-bottom: 1rem;">Las preguntas serán de comprensión de los textos expositivos leídos.</li>
             <li style="margin-bottom: 1rem;">Estas, con opciones, tendrán un valor de 20 puntos cada una. Al finalizar
-                el juego podrás
-                consultar el puntaje obtenido. ¡A jugar!</li>
+                el juego aparecerá el puntaje obtenido. ¡A jugar!</li>
         </ul>
 
         <!-- <p class="presentacion" style="text-indent: 3rem; margin-bottom: 1rem;">Podrás hacer girar una ruleta virtual y responder las preguntas elegidas al azar. Participarás
