--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
     <div>
         <h1 class="subTit">PRESENTACIÓN</h1>
         <p class="presentacion" style="margin-top: 3rem; text-indent: 4rem;">
+
+            
+            
             <!-- La presente página web definida como página electrónica, página digital es un documento o información
             electrónica capaz de contener textos, sonidos, videos, programas, enlaces, imágenes, y que puede ser
             accedida mediante un navegador web. Una página web está compuesta principalmente por información de un tema
@@ -97,7 +100,7 @@
             Comprensión lectora con el objetivo de ayudar a mejorar su comprensión. Se proponen actividades diversas y
             lúdicas con la finalidad de poner en práctica las estrategias de comprensión de este tipo de texto. -->
 
-            La presente página web definida como página electrónica, página digital es un documento o
+            <!-- La presente página web definida como página electrónica, página digital es un documento o
             información electrónica capaz de contener textos, sonidos, videos, programas, enlaces,
             imágenes, y que puede ser accedida mediante computadora o celular.
             Esta página web está compuesta principalmente por información sobre un tema: El texto
@@ -107,13 +110,16 @@
             Por medio de esta herramienta tecnológica se intentará vincular desde la virtualidad el
             trabajo del docente y del alumno atendiendo al contexto de no presencialidad.
             Se proponen actividades diversas, lúdicas e interactivas con la finalidad de poner en práctica
-            las estrategias de comprensión de este tipo de texto.
+            las estrategias de comprensión de este tipo de texto. -->
 
 
         </p>
         <div style="height: 20px;"></div>
 
-        <p style="text-align: center; font-size: 2rem; color: white;">¡Bienvenidos!</p>
+        <p style="text-align: center; font-size: 2rem; color: white;">
+        <!-- ¡Bienvenidos! -->
+        Bienvenidos a esta página web está pensada para que trabajes con el TEXTO EXPOSITIVO.</br> Veamos de qué se trata con el siguiente tutorial.
+        </p>
 
         <div style="height: 20px;"></div>
     </div>
@@ -180,7 +186,7 @@
     </p> -->
     <ol class="presentacion" type="a" style="margin-top: 1rem;">
         <li style="margin-bottom: 1rem;">
-            Lee co
+            Lee con atención los siguientes textos.
         <li>
             <!-- Observa los elementos que están sueltos y que pertenecen a los textos leídos. Coloca cada elemento con el
             texto correspondiente.
