--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
         <p style="text-align: center; font-size: 2rem; color: white;">
         <!-- ¡Bienvenidos! -->
-        Bienvenidos a esta página web está pensada para que trabajes con el TEXTO EXPOSITIVO.</br> Veamos de qué se trata con el siguiente tutorial.
+        Bienvenidos a esta página web que está pensada para que trabajes con el TEXTO EXPOSITIVO.</br> Veamos de qué se trata con el siguiente tutorial.
         </p>
 
         <div style="height: 20px;"></div>
